syntax = "proto3";

option java_package="com.tanmoy.ContactFindService.proto";

message Contact {
   int32 id = 1;
   string firstName = 2;
   string lastName = 3;
   string email = 4;
   string address = 5;
}